--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 
 <body>
+    <header>
+        <h1>Travel Track</h1>
+    </header>
     <div id="container">
-        <div id="main" class="container">
-            <h1>Travel Track</h1>
-        </div>
         <div id="map">
         </div>
     </div>
