add file upload

--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
 
 <body>
   <ul class="menu">
-    <li><a class="menuItem" href="#">Add file</a></li>
+    <li>
+      <label class="menuItem" for="fileInput">
+        Add file
+        <input type="file" id="fileInput"/>
+      </label>
+    </li>
+    
     <li><a class="menuItem" href="#">Export</a></li>
   </ul>
   <button class="hamburger">
-    <!-- material icons https://material.io/resources/icons/ -->
     <i class="menuIcon material-icons">menu</i>
     <i class="closeIcon material-icons">close</i>
   </button> 
