can delete added files

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     </li>
     
     <li><a class="menuItem" href="#">Export</a></li>
+    <div class="menuItem">
+      <ul class="fileList">
+        <!-- list of added files -->
+      </ul>
+    </div>
   </ul>
   <button class="hamburger">
     <i class="menuIcon material-icons">menu</i>
