douglasPeucker and draggable points

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
       <ul class="fileList">
         <!-- list of added files -->
       </ul>
+    <li>
+        <label class="menuItem" for="markerToggle">
+            Show Markers
+            <input type="checkbox" id="markerToggle">
+        </label>
+    </li>
+    <li>
+      <label class="menuItem" for="smoothnessSlider">
+          Smoothness: <span id="smoothnessValue">0.2</span>
+          <input type="range" min="0" max="1" step="0.1" value="0.2" id="smoothnessSlider">
+      </label>
+  </li>
   </ul>
   <button class="hamburger">
     <i class="menuIcon material-icons">menu</i>
