simplification by distance

--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
         <!-- list of added files -->
       </ul>
     <li>
-        <label class="menuItem" for="markerToggle">
-            Show Markers
-            <input type="checkbox" id="markerToggle">
-        </label>
+      <label class="menuItem" for="markerToggle">
+        Show Markers
+        <input type="checkbox" id="markerToggle">
+    </label>
+      <label class="menuItem" for="simplifyBySpeedToggle">
+        Simplify by Speed
+        <input type="checkbox" id="simplifyBySpeedToggle">
+    </label>
+      <label class="menuItem" for="simplifyByDistanceToggle">
+        Simplify by Distance
+        <input type="checkbox" id="simplifyByDistanceToggle">
+    </label>
     </li>
     <li>
       <label class="menuItem" for="smoothnessSlider">
